projects/compiler/test/typechecker/match/error_unfilled_holes.2.out
Error at %FILE_NAME%:4:8
Could not determine type for match expression result
  |    2 => match arr[1] {
            ^
Type '<unknown>[]' has unfilled holes. Please use an explicit type annotation to denote the type
