projects/compiler/test/typechecker/match/error_unfilled_holes.2.abra
val arr = [1, 2, 3]
val x = match arr[0] {
  1 => []
  2 => match arr[1] {
    1 => []
    2 => []
    else => []
  }
  3 => []
  else => ["hello"]
}
